# spdoc-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  coding-workflow.md  pyproject.toml
.claude/: settings.json
.claude/rules/: github-actions.md  pytest-rules.md  python-lang.md
.claude/standards/: configuration.md  error-handling.md  git-workflow.md  logging.md  security.md  telemetry.md  testing.md  wiki.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  format-lint.yml  openwiki-update.yml  type-check.yml  unit-tests.yml
openwiki/: .last-update.json  index.md  quickstart.md  testing.md
openwiki/architecture/: auth.md  index.md  overview.md
openwiki/reference/: index.md  spec-and-adrs.md
spec/: spec.md
spec/adr/: 0001-app-only-client-credentials-auth.md  0002-permission-scope-sites-selected.md  0003-fastmcp-framework.md  0004-microsoft-graph-api.md  0005-dual-transport-stdio-http.md
spec/plans/: issue-8-graph-client.md
src/: main.py
src/spdoc_mcp/: __init__.py  __main__.py  auth.py  errors.py  graph.py  logging_config.py  middleware.py  server.py  settings.py
src/spdoc_mcp/tools/: __init__.py  list_columns.py
tests/: conftest.py  test_auth.py  test_errors.py  test_graph.py  test_logging_config.py  test_middleware.py  test_server.py  test_settings.py
tests/tools/: test_list_columns.py
