[project]
name = "spdoc_mcp"
version = "0.1.0"
description = "spdoc-mcp"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "ARG", "SIM", "ERA", "PLR", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.13"
files = ["src"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
