[project]
name = "spdoc_mcp"
version = "0.1.0"
description = "spdoc-mcp"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
spdoc-mcp = "spdoc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spdoc_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "ARG", "SIM", "ERA", "PLR", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
# Pin the first-party package so import grouping doesn't depend on which submodules
# exist on disk yet (TDD tests may import a module before its source is written).
known-first-party = ["spdoc_mcp"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
files = ["src"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
